Created an initial workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 params {
     base = '/N/project/Krolab/Siddharth/Pipelines/scRNA-seq'
     transcriptome = "${params.base}/reference/refdata-gex-GRCh38-2024-A"
-    samples = "${params.base}/samples.csv"
+    samplesheet = "${params.base}/samples.csv"
 
     integration_script = "${params.base}/Rscripts/integration.r"
     integration_dir = "${params.results}/integration"
@@ -15,6 +15,7 @@ params {
 
     // Parameters for CellRanger
     skip_cellranger = false
+    fallback_to_cellranger = true
     cellranger_dir = "${params.results}/cellranger"
     
 
