Add proper parameters and modified workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,23 +2,38 @@ params {
     base = '/N/project/Krolab/Siddharth/Pipelines/scRNA-seq'
     transcriptome = "${params.base}/reference/refdata-gex-GRCh38-2024-A"
     samplesheet = "${params.base}/samples.csv"
+    results = "${params.base}/results"
 
+    // Integration parameters
     integration_script = "${params.base}/Rscripts/integration.r"
     integration_dir = "${params.results}/integration"
+    integration_method = 'cca'  // cca, rpca, harmony, mnn
+    min_cells = 3
+    min_features = 200
+    max_features = 7000
+    min_umi = 1000
+    max_umi = 50000
+    max_mt_percent = 20
+    dims = 30
+    resolution = 0.3
 
+    // Annotation parameters
     annotation_script = "${params.base}/Rscripts/annotation.r"
-    annotation_method = 'singler' // Options: 'SingleR', 'Azimuth', 'clustifyR'
-    annotation_dir = "${params.results}/annotation"
+    annotation_dir = "${params.results}/annotation"    
+    annotation_method = 'singler'  // singler or azimuth
+    reference_dataset = 'celldex::HumanPrimaryCellAtlasData'
+    species = 'human'  // human or mouse
+    azimuth_reference = 'pbmc'  // pbmc, lung, motor_cortex, etc.
     
-    results = "${params.base}/results"
+    skip_fastqc = false
     fastqc_dir = "${params.results}/fastqc"
 
     // Parameters for CellRanger
     skip_cellranger = false
     fallback_to_cellranger = true
     cellranger_dir = "${params.results}/cellranger"
-    
 
+    help = false
 }
 
 profiles {
@@ -43,6 +58,39 @@ profiles {
                 memory = '120.GB'
                 time = '72.h'
             }
+
+            withName: 'Integration' {
+                cpus = 12
+                memory = '120.GB'
+                time = '30.h'
+            }
+
+            withName: 'Annotation' {
+                cpus = 12
+                memory = '120.GB'
+                time = '30.h'
+            }
         }
     }
+}
+
+// Report Configuration
+report {
+    enabled = true
+    file = "${params.results}/reports/execution_report_%j.html"
+}
+
+timeline {
+    enabled = true
+    file = "${params.results}/reports/timeline_%j.html"
+}
+
+trace {
+    enabled = true
+    file = "${params.results}/reports/trace_%j.txt"
+}
+
+dag {
+    enabled = true
+    file = "${params.results}/reports/pipeline_dag_%j.html"
 }
