Added gitignore and fixed params

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,6 +27,7 @@ params {
     
     skip_fastqc = false
     fastqc_dir = "${params.results}/fastqc"
+    multiqc_dir = "${params.results}/multiqc"
 
     // Parameters for CellRanger
     skip_cellranger = false
