Fixing env issues with conda and renv

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,12 +19,12 @@ params {
 
     // Annotation parameters
     annotation_script = "${params.base}/Rscripts/annotation.r"
-    annotation_dir = "${params.results}/annotation"    
-    annotation_method = 'singler'  // singler or azimuth
+    annotation_dir = "${params.results}/annotation"
+    annotation_method = 'azimuth'  // singler or azimuth
     reference_dataset = 'celldex::HumanPrimaryCellAtlasData'
     species = 'human'  // human or mouse
     azimuth_reference = 'pbmc'  // pbmc, lung, motor_cortex, etc.
-    
+
     skip_fastqc = false
     fastqc_dir = "${params.results}/fastqc"
     multiqc_dir = "${params.results}/multiqc"
@@ -47,6 +47,19 @@ profiles {
             cpus = 8
             memory = '50.GB'
             time = '24.h'
+
+            beforeScript = """
+                module load conda
+                source \$(conda info --base)/etc/profile.d/conda.sh
+                conda activate /N/project/Krolab/Siddharth/Pipelines/scrna-seq/conda_envs/env/renv
+                export LANG=en_US.UTF-8
+                export LC_ALL=en_US.UTF-8
+                export R_LIBS=/N/project/Krolab/Siddharth/Pipelines/scrna-seq/conda_envs/env/renv/lib/R/library
+                export RENV_CONFIG_SANDBOX_ENABLED=FALSE
+                export RENV_PATHS_ROOT=/N/project/Krolab/Siddharth/Pipelines/scrna-seq/renv_root
+                export RENV_PATHS_CACHE=/N/project/Krolab/Siddharth/Pipelines/scrna-seq/renv_cache
+                export RENV_PATHS_SANDBOX=/N/project/Krolab/Siddharth/Pipelines/scrna-seq/renv_cache/sandbox
+            """
 
             withName: 'QC' {
                 cpus = 4
