Added to README

--- a/env.yaml
+++ b/env.yaml
@@ -148,6 +148,7 @@ dependencies:
   - libjpeg-turbo=3.1.2=hb03c661_0
   - liblapack=3.11.0=4_h47877c9_openblas
   - liblzma=5.8.1=hb9d3cd8_2
+  - liblzma-devel=5.8.1=hb9d3cd8_2
   - libmpdec=4.0.0=hb9d3cd8_0
   - libnghttp2=1.67.0=had1ee68_0
   - libopenblas=0.3.30=pthreads_h94d23a6_4
@@ -550,6 +551,9 @@ dependencies:
   - xorg-libxrender=0.9.12=hb9d3cd8_0
   - xorg-libxt=1.3.1=hb9d3cd8_0
   - xorg-libxtst=1.2.5=hb9d3cd8_3
+  - xz=5.8.1=hbcc6ac9_2
+  - xz-gpl-tools=5.8.1=hbcc6ac9_2
+  - xz-tools=5.8.1=hb9d3cd8_2
   - yacman=0.9.3=pyhd8ed1ab_0
   - yaml=0.2.5=h280c20c_3
   - zeromq=4.3.5=h387f397_9
