Integrated cellranger statistics into multiqc report

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,13 @@ params {
     dims = 30
     resolution = 0.3
 
+    // QC Parameters
+    skip_fastqc = false
+    fastqc_dir = "${params.results}/fastqc"
+    multiqc_dir = "${params.results}/multiqc"
+
+    skip_downstream_analysis = false
+
     // Annotation parameters
     annotation_script = "${params.base}/Rscripts/annotation.r"
     annotation_dir = "${params.results}/annotation"
@@ -25,9 +32,7 @@ params {
     species = 'human'  // human or mouse
     azimuth_reference = 'pbmc'  // pbmc, lung, motor_cortex, etc.
 
-    skip_fastqc = false
-    fastqc_dir = "${params.results}/fastqc"
-    multiqc_dir = "${params.results}/multiqc"
+    
 
     // Parameters for CellRanger
     skip_cellranger = false
